# user_microservice

./: .gitignore  LICENSE  README.md  main.py  prod.dockerfile  pyproject.toml  sonar-project.properties  test.compose.yml  test.dockerfile  tox.ini
.github/workflows/: build.yml  ci.yml  sonar.yml  test.yml
auth/: JWTBearer.py  auth.py  user_auth.py
db/: create_database.py  database.py
models/: user.py
repositories/: userRepo.py
routers/: auth.py
schemas/: user.py
tests/repositories/: test_user_repo.py
tests/routers/: test_auth.py
tests/routers/auth/: test_auth.py
tests/services/: test_auth_service.py
